--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
 version: '2'
 
-volumes:
-  vendor:
-
 services:
   api:
     build:
       context: .
-      dockerfile: docker/api/Dockerfile
     volumes:
-      - ./src/api:/go/src/api
-      - vendor:/go/src/api/vendor
+      - .:/go/src/github.com/kkeisuke/docker-go-gin
     ports:
       - 3001:3001
     tty:
